# Safepip

./: .gitignore  README.md  pyproject.toml  setup.py
src/safepip/: constants.py  distance.c  main.py  updateconstants.py
